Use correct copyright assertion
I had misinterpreted this as the license; it's actually just my
name and then the year.

--- a/shell/.stack/config.yaml
+++ b/shell/.stack/config.yaml
@@ -10,5 +10,5 @@ templates:
   params:
    author-name: Daniel Oosthuizen
    author-email: danieltheexperimenter@gmail.com
-   copyright: AGPL-3
+   copyright: (c) Daniel Oosthuizen 2017
    github-username: daantjie
